# C-C-Projects

project 1/: CMakeLists.txt  cipher.c  cipher.h  main.c  tests.c
project 2/: CMakeLists.txt  bus  main.c  python_script.py  sort_bus_lines.c  sort_bus_lines.h  test_bus_lines.c  test_bus_lines.h
project 3a/: markov_chain (DESKTOP-TKSMBEC's conflicted copy 2024-02-04).c  markov_chain.c  markov_chain.h  tweets_generator.c
project 3b/: CMakeLists.txt  Lab2.cpp  README.md  makefile  markov_chain.c  markov_chain.h  snakes_and_ladders  snakes_and_ladders.c  test.c  test.h  tweets  tweets-lm  tweets_generator  tweets_generator.c
project 4/: Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.h
project 5/: CMakeLists.txt  Movie.cpp  Movie.h  README.md  RecommendationSystem.cpp  RecommendationSystem.h  RecommendationSystemLoader.cpp  RecommendationSystemLoader.h  User.cpp  User.h  UsersLoader.cpp  UsersLoader.h  presubmit.cpp  print_main.cpp
